   * The South Guard
     * Proven by the Sword: tell Deoran to go to Westin if the citadel is
      secured (fixes #7360)
 * multiplayer maps:
   * new multiplayer maps: The Manzivan Traps
 * units:
   * balancing changes:
     * decreased cost of the Mudcrawler from 9 to 5
     * Necrophage no longer available as a random leader in multiplayer
   * new units
     * added the Armageddon Drake (not used in any mainline eras)
   * unit art
     * added a recruit animation for Skeleton
 * user interface
   * added an option to hide minimaps in the multiplayer lobby
   * added menu items for saving the current map
   * added turbo speed setting and changed ui accordingly
   * turn bell moved to sound tab in preferences
   * new volume slider for the turn bell
   * disabled inactive sliders instead of hiding them
   * sliders can be adjusted with keyboard (left and right arrow)
   * sidebar reports related to gold, units, villages and time get greyed out
     during other team's turns
   * improve the tiny gui support (resolution of 320x240 pixels)
   * when sighting friendly units, the message is now blue
   * show leader name in statistics title (patch #604, FR #6932)
   * initial support for GP2X controls
   * show leader's name and colour at status table even when that team is fogged
     (patch #605)
 * WML engine
   * fixed terrain probabilities for terrains defined with rotations (bug #7274)
   * added a 'hide_help' key that prevents a unit type from being listed in the
     in-game help
   * added an 'allow_new_game' key (default=yes) to prevent [multiplayer]
     scenarios from showing up in the multiplayer game creation interface
     (FR #6397)
   * new [set_specials] tag to allow custom specials in [effect] tags
   * new 'remove_specials' key to allow to removal of specials in [effect] tags
   * obsolete the 'set_special' key in [effect] tags
   * correct handling of UTF8 filenames under windows
   * animations can now use standard unit filters