@@ -87,3 +87,20 @@
 		[/effect]
 	[/trait]
 #enddef
+
+#define TRAIT_HEALTHY
+	[trait]
+	id=healthy
+	name= _ "healthy"
+	description= _ "Heals faster if resting"
+	[/trait]
+#enddef
+
+#define TRAIT_FEARLESS
+	[trait]
+	id=fearless
+	name= _ "fearless"
+	description= _ "Fights normally during unfavorable times of day/night"
+	[/trait]
+#enddef
+
