@@ -21,7 +21,6 @@
 	num_traits=2
 	markov_chain_size=2
 	{ELVISH_NAMES}
-
 	{TRAIT_DEXTROUS}
 	[/race]
 	[race]
@@ -34,16 +33,19 @@
 	name=human
 	num_traits=2
 	{HUMAN_NAMES}
+	{TRAIT_FEARLESS}
 	[/race]
 	[race]
 	name=dwarf
 	num_traits=2
 	{DWARVISH_NAMES}
+	{TRAIT_HEALTHY}
 	[/race]
 	[race]
 	name=orc
 	num_traits=2
 	{ORCISH_NAMES}
+	{TRAIT_FEARLESS}
 	[/race]
 	[race]
 	name=goblin
