@@ -14,6 +14,8 @@ Version 1.3-svn:
    * balancing changes:
      * decreased cost of the Mudcrawler from 9 to 5
      * Necrophage no longer available as a random leader in multiplayer
+   * new traits
+     * healthy (+4 rest healing), fearless (ignore unfavorable ToD)
    * new units
      * added the Armageddon Drake (not used in any mainline eras)
    * unit art
@@ -62,6 +64,7 @@ Version 1.3-svn:
    * new operation for set_variable : divide
    * Animations now use duration= tag instead of begin= and end= (backward
    compatible)
+   * [message]s now use the duration= tag instead of [delay]ing afterwards
  * multiplayer game management
    * client now tells the server if a game ended in victory or defeat
    * configurable castle size for random map generator (patch #598, FR #3232)
